--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -3518,6 +3518,350 @@ boss__rsyslog__centralized__container_config_config_map: |-
   export _IMRELP_PORT=${_IMRELP_PORT}
   export _RSYSLOG_SPOOL_PATH=${_RSYSLOG_SPOOL_PATH:-/var/spool/rsyslog}
 
+
+##########################################################################################################
+# .########.##.......##.....##.########.##....##.########.########...........######..########.##....##.########.########.....###....##.......####.########.########.########.
+# .##.......##.......##.....##.##.......###...##....##....##.....##.........##....##.##.......###...##....##....##.....##...##.##...##........##.......##..##.......##.....##
+# .##.......##.......##.....##.##.......####..##....##....##.....##.........##.......##.......####..##....##....##.....##..##...##..##........##......##...##.......##.....##
+# .######...##.......##.....##.######...##.##.##....##....##.....##.#######.##.......######...##.##.##....##....########..##.....##.##........##.....##....######...##.....##
+# .##.......##.......##.....##.##.......##..####....##....##.....##.........##.......##.......##..####....##....##...##...#########.##........##....##.....##.......##.....##
+# .##.......##.......##.....##.##.......##...###....##....##.....##.........##....##.##.......##...###....##....##....##..##.....##.##........##...##......##.......##.....##
+# .##.......########..#######..########.##....##....##....########...........######..########.##....##....##....##.....##.##.....##.########.####.########.########.########.
+##########################################################################################################
+boss__fluentd__centralized__subdomain: fluentd-centralized
+boss__fluentd__centralized__manifest_path: "{{manifest_dir_path}}/fluentd-centralized"
+boss__fluentd__centralized__namespace_name: kube-system
+boss__fluentd__centralized__fluentd_version: v2.5.0
+boss__fluentd__centralized__fluentd_image_repo: "bossjones/fluentd-elasticsearch"
+boss__fluentd__centralized__fluentd_image_tag: "{{ boss__fluentd__centralized__fluentd_version }}"
+boss__fluentd__centralized__shared_name: fluentd-centralized
+boss__fluentd__centralized__configmap_suffix: "-0-3-0"
+boss__fluentd__centralized__create_namespace: "absent"
+boss__fluentd__centralized__create_ingress: "present"
+boss__fluentd__centralized__loglevel: "debug"
+boss__fluentd__centralized__main_config_folder_prefix: "/fluentd-centralized/etc"
+boss__fluentd__centralized__promths_mtr_in_port: 24231
+boss__fluentd__centralized__monitor_agnt_in_port: 24220
+boss__fluentd__centralized__relp_in_port: 1601
+boss__fluentd__centralized__path_to_logs_inside_container: "/log"
+boss__fluentd__centralized__path_to_config_inside_container: "/config"
+boss__fluentd__centralized__path_to_work_inside_container: "/work"
+boss__fluentd__centralized__path_to_spool_inside_container: "/spool"
+boss__fluentd__centralized__path_to_grok_patterns_inside_container: "/grok.d"
+boss__fluentd__centralized__path_to_nfs_mount: "/mnt/publicdata/rsyslog"
+
+
+boss__fluentd__centralized__logrotate_version: 1.3
+boss__fluentd__centralized__logrotate_image_repo: "blacklabelops/logrotate"
+boss__fluentd__centralized__logrotate_image_tag: "{{ boss__fluentd__centralized__logrotate_version }}"
+
+
+################# Persistent volume claims - begin #########################
+
+# persistent volume claim - fluentd
+boss__fluentd__centralized__fluentd_pvc_labels: |-
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+
+boss__fluentd__centralized__fluentd_pvc_spec_storageClassName: "nfs-dynamic-class"
+boss__fluentd__centralized__fluentd_pvc_spec_resources_requests_storage: "100Mi"
+
+# persistent volume - fluentd
+boss__fluentd__centralized__fluentd_pv_labels: |-
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: {{boss__fluentd__centralized__shared_name}}
+
+boss__fluentd__centralized__fluentd_pv_spec_capacity_storage: 100Mi
+boss__fluentd__centralized__fluentd_pv_spec_nfs: |-
+    server: {{nfs_server_ip_override}}
+    path: "{{boss__fluentd__centralized__path_to_nfs_mount}}"
+# NOTE: ^ this is the /mnt/publicdata/rsyslog folder on purpose
+################# Persistent volume claims - end #########################
+
+
+# NOTE: Test using this!
+# NOTE: Test using this!
+# NOTE: Test using this!
+#  malcolm  ⎇  feature-centralized-fluentd-aggregator {24}  ⓔ bosslab-playbooks2  ⓔ 2.4.3  ~/dev/bossjones/bosslab-playbooks   syslog-netcat-test fluentd-centralized.scarlettlab.com 6170
+# Looks like a macOS
+# <150>Apr 10 00:17:13 darktop.localdomain syslog-netcat-test[76775]: testing baby
+# fluentd-centralized.scarlettlab.com [192.168.205.10] 6170 open
+#  malcolm  ⎇  feature-centralized-fluentd-aggregator {24}  ⓔ bosslab-playbooks2  ⓔ 2.4.3  ~/dev/bossjones/bosslab-playbooks   syslog-netcat-test-udp fluentd-centralized.scarlettlab.com 6160
+
+
+boss__fluentd__centralized__deployment_spec_template_containers_resources: |
+  limits:
+    cpu: ".2"
+    memory: "100Mi"
+  requests:
+    cpu: "0.05"
+    memory: "10Mi"
+
+boss__fluentd__centralized__serviceAccountName: "{{boss__fluentd__centralized__shared_name}}"
+boss__fluentd__centralized__deployment_spec_replicas: 3
+
+# boss__fluentd__centralized__deployment_spec_template_containers_command: []
+
+boss__fluentd__centralized__cluster_role_rules: |-
+  - apiGroups:
+    - ""
+    resources:
+    - "namespaces"
+    - "pods"
+    - "secrets"
+    - "pods/log"
+    - "deployments"
+    - "batch"
+    - "extensions"
+    - "crontabs"
+    verbs:
+    - "get"
+    - "watch"
+    - "list"
+    - "update"
+    - "post"
+  # DEBUG: CUSTOM FROM HERE ON OUT ---- 5/10/2019
+  - apiGroups:
+    - ""
+    resources:
+    - persistentvolumes
+    verbs:
+    - get
+    - list
+    - patch
+    - update
+    - watch
+  - apiGroups:
+    - storage.k8s.io
+    resources:
+    - volumeattachments
+    verbs:
+    - get
+    - list
+    - patch
+    - update
+    - watch
+  - apiGroups:
+    - ""
+    resources:
+    - configmaps
+    - secrets
+    verbs:
+    - '*'
+  - apiGroups:
+    - ""
+    resources:
+    - pods
+    verbs:
+    - list
+    - delete
+  - apiGroups:
+    - ""
+    resources:
+    - services
+    - services/finalizers
+    - endpoints
+    verbs:
+    - get
+    - create
+    - update
+    - delete
+  - apiGroups:
+    - ""
+    resources:
+    - nodes
+    verbs:
+    - list
+    - watch
+  - apiGroups:
+    - ""
+    resources:
+    - namespaces
+    verbs:
+    - get
+    - list
+    - watch
+  # DEBUG: CUSTOM FROM HERE ON OUT END ---- 5/10/2019
+
+boss__fluentd__centralized__deployment_labels: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+  version: {{boss__fluentd__centralized__fluentd_version}}
+  kubernetes.io/cluster-service: "true"
+
+boss__fluentd__centralized__deployment_spec_matchLabels: "disabled"
+
+# boss__fluentd__centralized__deployment_spec_matchLabels: |-
+#   k8s-app: {{boss__fluentd__centralized__shared_name}}
+#   version: {{boss__fluentd__centralized__fluentd_version}}
+
+boss__fluentd__centralized__deployment_spec_template_metadata_labels: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+  version: {{boss__fluentd__centralized__fluentd_version}}
+  kubernetes.io/cluster-service: "true"
+
+boss__fluentd__centralized__deployment_spec_template_metadata_annotations: "disabled"
+
+boss__fluentd__centralized__deployment_spec_template_containers_ports: |-
+  - containerPort: {{boss__fluentd__centralized__promths_mtr_in_port}}
+    name: promths-mtr
+    protocol: TCP
+  - containerPort: {{boss__fluentd__centralized__monitor_agnt_in_port}}
+    name: monitor-agnt
+    protocol: TCP
+
+
+boss__fluentd__centralized__service_spec_ports: |-
+  - name: promths-mtr
+    port: {{boss__fluentd__centralized__promths_mtr_in_port}}
+    protocol: TCP
+    targetPort: {{boss__fluentd__centralized__promths_mtr_in_port}}
+  - name: monitor-agnt
+    port: {{boss__fluentd__centralized__monitor_agnt_in_port}}
+    protocol: TCP
+    targetPort: {{boss__fluentd__centralized__monitor_agnt_in_port}}
+
+boss__fluentd__centralized__deployment_spec_template_initContainers: |-
+  - name: init-{{boss__fluentd__centralized__shared_name}}
+    image: {{boss__fluentd__centralized__fluentd_image_repo}}:{{boss__fluentd__centralized__fluentd_image_tag}}
+    command: [ "/bin/sh" ]
+    args: ['-c', 'tree']
+
+boss__fluentd__centralized__deployment_spec_template_containers_env: |-
+  # - name: FLUENT_ELASTICSEARCH_HOST
+  #   value: "elasticsearch"
+  # - name: FLUENT_ELASTICSEARCH_PORT
+  #   value: "9200"
+
+  # Memory limit that the file tail plugin can use when appending data to the Engine
+  - name: TAIL_BUF_LIMIT
+    value: "5MB"
+
+  - name: NODE_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.hostIP
+  - name: POD_UID
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.uid
+  - name: POD_NAME
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.name
+  - name: POD_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.podIP
+  - name: POD_NAMESPACE
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.namespace
+  - name: NODE_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.hostIP
+  - name: NODE_NAME
+    valueFrom:
+      fieldRef:
+        fieldPath: spec.nodeName
+
+  - name: TZ
+    value: "UTC"
+
+boss__fluentd__centralized__deployment_spec_template_spec_volumeMounts: |
+  # fluentd work files; do not share with multiple instances
+  - name: work
+    mountPath: {{boss__fluentd__centralized__path_to_work_inside_container}}
+    readOnly: false
+  # log file store (if used)
+  - name: log
+    mountPath: {{boss__fluentd__centralized__path_to_logs_inside_container}}
+    readOnly: false
+
+  - name: spool
+    mountPath: {{boss__fluentd__centralized__path_to_spool_inside_container}}
+    readOnly: false
+
+  - name: config-volume
+    mountPath: /etc/fluent/config.d
+
+  - name: grok-patterns
+    mountPath: {{boss__fluentd__centralized__path_to_grok_patterns_inside_container}}
+
+boss__fluentd__centralized__deployment_spec_template_spec_volumes: |
+  - name: work
+    emptyDir: {}
+  - name: spool
+    emptyDir: {}
+  # log file store (if used)
+  - name: log
+    persistentVolumeClaim:
+      claimName: {{boss__fluentd__centralized__shared_name}}-pvc
+
+  - name: config-volume
+    configMap:
+      name: {{boss__fluentd__centralized__shared_name}}-grokconfig{{boss__fluentd__centralized__configmap_suffix}}
+      # defaultMode: 0775
+
+  - name: grok-patterns
+    configMap:
+      name: {{boss__fluentd__centralized__shared_name}}-grok-patterns{{boss__fluentd__centralized__configmap_suffix}}
+      # defaultMode: 0775
+
+
+boss__fluentd__centralized__deployment_spec_template_spec_sidcar_container: "disabled"
+
+boss__fluentd__centralized__service_labels: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+  version: {{boss__fluentd__centralized__fluentd_version}}
+  kubernetes.io/cluster-service: "true"
+
+
+boss__fluentd__centralized__service_annotations: "disabled"
+
+boss__fluentd__centralized__service_spec_type: ClusterIP
+
+
+boss__fluentd__centralized__service_spec_selector: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+
+boss__fluentd__centralized__ingress_spec_rules_http_paths: |
+  - path: /
+    backend:
+      serviceName: {{boss__fluentd__centralized__shared_name}}
+      servicePort: {{boss__fluentd__centralized__promths_mtr_in_port}}
+
+boss__fluentd__centralized__ingress_labels: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+  version: {{boss__fluentd__centralized__fluentd_version}}
+  kubernetes.io/cluster-service: "true"
+
+boss__fluentd__centralized__ingress_annotations: |-
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
+
+boss__fluentd__centralized__deployment_spec_template_spec_hostNetwork: True
+boss__fluentd__centralized__deployment_spec_template_spec_hostPID: True
+
+
+boss__fluentd__centralized__deployment_spec_template_spec_nodeSelector: |-
+  beta.kubernetes.io/os: linux
+
+# boss__fluentd__centralized__deployment_spec_template_spec_securityContext: "disabled"
+boss__fluentd__centralized__deployment_spec_template_spec_securityContext: |-
+  # SOURCE: https://docs.okd.io/latest/rest_api/apis-apps/v1beta2.Deployment.html
+  privileged: true
+
+
+boss__fluentd__centralized__deployment_spec_template_spec_containers_livenessProbe: |-
+  tcpSocket:
+    port: {{boss__fluentd__centralized__tcp_in_port}}
+  initialDelaySeconds: 60
+  timeoutSeconds: 10
+
+
 # ---
 # local_release_dir: /tmp/releases
 
