--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -2306,6 +2306,20 @@ boss__fluentd__centralized__logrotate_version: 1.3
 boss__fluentd__centralized__logrotate_image_repo: "blacklabelops/logrotate"
 boss__fluentd__centralized__logrotate_image_tag: "{{ boss__fluentd__centralized__logrotate_version }}"
 
+# Example hostnames
+# ./
+# ./unifisecuritygateway3p/
+# ./unifisecuritygateway3p/uncategorized
+# ./unifisecuritygateway3p/secure.log
+# ./unifisecuritygateway3p/messages.log
+# ./unifisecuritygateway3p/secure
+# ./unifisecuritygateway3p/cron.log
+# ./unifisecuritygateway3p/uncategorized.log
+# ./unifisecuritygateway3p/cron
+# ./unifiap-ac-pro.localdomain/
+# ./unifiap-ac-pro.localdomain/messages.log
+# ./unifiswitch16poe-150w.localdomain/
+# ./unifiswitch16poe-150w.localdomain/messages.log
 
 ################# Persistent volume claims - begin #########################
 
@@ -3213,17 +3227,17 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
     template(
         name   = "LOCAL_SecureFileTemplate"
         type   = "string"
-        string = "/var/log/secure"
+        string = "/var/log/secure.log"
     )
     template(
         name   = "LOCAL_MailFileTemplate"
         type   = "string"
-        string = "/var/log/maillog"
+        string = "/var/log/maillog.log"
     )
     template(
         name   = "LOCAL_CronFileTemplate"
         type   = "string"
-        string = "/var/log/cron"
+        string = "/var/log/cron.log"
     )
     template(
         name   = "LOCAL_SpoolerFileTemplate"
@@ -3262,12 +3276,28 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
     # <><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
     #########################################################################
     template(
+        name = "REMOTE_IptablesFileTemplate"
+        type = "list"
+    ) {
+        constant(value = "{{boss__rsyslog__centralized__path_to_logs_inside_container}}/client_logs/")
+        property(name  = "fromhost")
+        constant(value = "/iptables.log")
+    }
+    template(
         name = "REMOTE_MessagesFileTemplate"
         type = "list"
     ) {
         constant(value = "{{boss__rsyslog__centralized__path_to_logs_inside_container}}/client_logs/")
         property(name  = "fromhost")
         constant(value = "/messages.log")
+    }
+    template(
+        name = "REMOTE_KernelFileTemplate"
+        type = "list"
+    ) {
+        constant(value = "{{boss__rsyslog__centralized__path_to_logs_inside_container}}/client_logs/")
+        property(name  = "fromhost")
+        constant(value = "/kernel.log")
     }
     template(
         name = "REMOTE_SecureFileTemplate"
@@ -3627,6 +3657,30 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
             stop
         }
     } else {
+        if prifilt("kern.*") and ($msg contains "iptables") then {
+            action(
+                name     = "REMOTE_IptablesToFile"
+                type     = "omfile"
+                dynaFile = "REMOTE_IptablesFileTemplate"
+                template = "RSYSLOG_TraditionalFileFormat"
+            )
+            action(type="omstdout"
+                   template="RSYSLOG_TraditionalFileFormat")
+            stop
+        }
+        if prifilt("kern.*") then {
+            action(
+                name     = "REMOTE_KernelToFile"
+                type     = "omfile"
+                dynaFile = "REMOTE_KernelFileTemplate"
+                template = "RSYSLOG_TraditionalFileFormat"
+            )
+            action(type="omstdout"
+                   template="RSYSLOG_TraditionalFileFormat")
+            stop
+        }
+        # Log anything (except mail) of level info or higher.
+        # Don't log private authentication messages!
         if prifilt("*.info;mail.none;authpriv.none;cron.none") then {
             action(
                 name     = "REMOTE_MessagesToFile"
@@ -3642,7 +3696,7 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
         }
         if prifilt("syslog.*") then {
             action(
-                name     = "LOCAL_SyslogToFile"
+                name     = "REMOTE_SyslogToFile"
                 type     = "omfile"
                 dynaFile = "REMOTE_SyslogFileTemplate"
                 template = "RSYSLOG_TraditionalFileFormat"
@@ -3652,6 +3706,7 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
                    template="RSYSLOG_TraditionalFileFormat")
             stop
         }
+        # The authpriv file has restricted access.
         if prifilt("authpriv.*") then {
             action(
                 name     = "REMOTE_SecureToFile"
@@ -3664,6 +3719,7 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
                    template="RSYSLOG_TraditionalFileFormat")
             stop
         }
+        # Log all the mail messages in one place.
         if prifilt("mail.*") then {
             action(
                 name     = "REMOTE_MailToFile"
@@ -3677,6 +3733,7 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
                    template="RSYSLOG_TraditionalFileFormat")
             stop
         }
+        # Log cron stuff
         if prifilt("cron.*") then {
             action(
                 name     = "REMOTE_CronToFile"
@@ -3689,6 +3746,7 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
                    template="RSYSLOG_TraditionalFileFormat")
             stop
         }
+        # Save news errors of level crit and higher in a special file.
         if prifilt("uucp,news.crit") then {
             action(
                 name     = "REMOTE_SpoolToFile"
@@ -3701,6 +3759,7 @@ boss__rsyslog__centralized__rsyslog_conf_config_map: |-
                    template="RSYSLOG_TraditionalFileFormat")
             stop
         }
+        # Save boot messages also to boot.log
         if prifilt("local7.*") then {
             action(
                 name     = "REMOTE_BootToFile"
