--- a/containers/fluentd-elasticsearch/Gemfile
+++ b/containers/fluentd-elasticsearch/Gemfile
@@ -15,6 +15,7 @@ gem 'fluent-plugin-concat', '~>2.3.0'
 gem 'fluent-plugin-flowcounter', '~>1.3.0'
 gem 'lru_redux'
 gem 'rest-client', '~>2.0.2'
+gem 'fluent-plugin-geoip'
 
 
 gem "git", "~>1.4.0"
