wip: borg manifest update

--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -2282,7 +2282,7 @@ boss__elasticsearch__exporter__cluster_role_rules: |-
 boss__fluentd__centralized__subdomain: fluentd-centralized
 boss__fluentd__centralized__manifest_path: "{{manifest_dir_path}}/fluentd-centralized"
 boss__fluentd__centralized__namespace_name: kube-system
-boss__fluentd__centralized__fluentd_version: v2.4.0
+boss__fluentd__centralized__fluentd_version: v2.5.0
 boss__fluentd__centralized__fluentd_image_repo: "bossjones/fluentd-elasticsearch"
 boss__fluentd__centralized__fluentd_image_tag: "{{ boss__fluentd__centralized__fluentd_version }}"
 boss__fluentd__centralized__shared_name: fluentd-centralized
@@ -2491,7 +2491,7 @@ boss__fluentd__centralized__deployment_spec_template_initContainers: |-
   - name: init-{{boss__fluentd__centralized__shared_name}}
     image: {{boss__fluentd__centralized__fluentd_image_repo}}:{{boss__fluentd__centralized__fluentd_image_tag}}
     command: [ "/bin/sh" ]
-    args: ['-c', 'ls -lta']
+    args: ['-c', 'sleep 15']
 
 boss__fluentd__centralized__deployment_spec_template_containers_env: |-
   - name: FLUENTD_ARGS
@@ -2563,10 +2563,10 @@ boss__fluentd__centralized__deployment_spec_template_spec_volumes: |
   - name: spool
     emptyDir: {}
   # log file store (if used)
-  # This is rsyslog-pvc on purpose, we'r trying to mount the pvc that rsyslog-pvc creates
+  # This is {{boss__rsyslog__centralized__shared_name}}-pvc on purpose, we'r trying to mount the pvc that {{boss__rsyslog__centralized__shared_name}}-pvc creates
   - name: log
     persistentVolumeClaim:
-      claimName: rsyslog-pvc
+      claimName: {{boss__rsyslog__centralized__shared_name}}-pvc
 
   - name: config-volume
     configMap:
@@ -2626,7 +2626,7 @@ boss__fluentd__centralized__deployment_spec_template_spec_securityContext: |-
 boss__fluentd__centralized__deployment_spec_template_spec_containers_livenessProbe: |-
   tcpSocket:
     port: {{boss__fluentd__centralized__promths_mtr_in_port}}
-  initialDelaySeconds: 60
+  initialDelaySeconds: 90
   timeoutSeconds: 10
 
 
