--- a/containers/fluentd-elasticsearch/Gemfile
+++ b/containers/fluentd-elasticsearch/Gemfile
@@ -1,41 +1,32 @@
 source 'https://rubygems.org'
 
-gem 'fluent-plugin-detect-exceptions', '~>0.0.11'
+gem 'fluent-plugin-detect-exceptions'
 gem 'activesupport', '~>5.2.1'
 gem 'fluent-plugin-elasticsearch'
 gem 'ffi'
-gem 'fluent-plugin-prometheus', '~>1.0.1'
-gem 'fluent-plugin-rewrite-tag-filter', '~> 2.1.0'
-gem "fluentd", "1.2.2"
+gem 'fluent-plugin-prometheus'
+gem 'fluent-plugin-rewrite-tag-filter'
+gem "fluentd"
 gem 'oj', '~>3.6.5'
-gem 'fluent-plugin-kubernetes_metadata_filter', '~> 2.1.4'
-gem 'fluent-plugin-systemd', '~>1.0.1'
-gem 'fluent-plugin-multi-format-parser', '~>1.0.0'
-gem 'fluent-plugin-concat', '~>2.3.0'
-gem 'fluent-plugin-flowcounter', '~>1.3.0'
+gem 'fluent-plugin-systemd'
+gem 'fluent-plugin-multi-format-parser'
+gem 'fluent-plugin-concat'
+gem 'fluent-plugin-flowcounter'
 gem 'lru_redux'
 gem 'rest-client', '~>2.0.2'
 gem 'fluent-plugin-geoip'
 
-
 gem "git", "~>1.4.0"
 gem "msgpack", "~>1.2.4"
-# gem "fluent-plugin-kubernetes_metadata_filter", "~>1.0.0"
-# gem "fluent-plugin-elasticsearch", "~>2.4.1"
-# gem "fluent-plugin-systemd", "~>0.3.1"
-# gem "fluent-plugin-detect-exceptions", "~>0.0.9"
-# gem "fluent-plugin-prometheus", "~>0.3.0"
-# gem "fluent-plugin-multi-format-parser", "~>1.0.0"
+
 gem "fluent-logger"
 gem "fluent-mixin-config-placeholders"
 gem "fluent-mixin-plaintextformatter"
 gem "fluent-plugin-cadvisor"
 gem "fluent-plugin-docker_metadata_filter"
 gem "fluent-plugin-ignore-filter"
-gem "fluent-plugin-kubernetes"
 gem "fluent-plugin-mongo"
 gem "fluent-plugin-record-reformer"
-# gem "fluent-plugin-rewrite-tag-filter"
 gem "fluent-plugin-s3"
 gem "fluent-plugin-scribe"
 gem "fluent-plugin-secure-forward"
